--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <button class="btn-primary">Explore More</button>
         </div>
       </section>
-      <!-- features will enjoy -->
+      <!-- Some facts -->
        <section>
         <h3 class="section-title">Some Facts</h3>
         <p class="text-light-gray fact-describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -101,7 +101,20 @@
         </div>
        </section>
        <!-- some facts -->
-        <section class="some-facts"></section>
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div    class="sponsor-comapanies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+
+            </div>
+        </section>
     </main>
     <footer>
 
